# MPM-PyTorch

./: .gitignore  README.md  benchmark_svd.py  pyproject.toml  simulate.py
.github/workflows/: pypi-auto-release.yml
examples/: jelly.yaml  sand.yaml
mpm_pytorch/: __init__.py  boundary_condition.py  mpm_solver.py
mpm_pytorch/constitutive_models/: __init__.py  abstract.py  elasticity.py  plasticity.py
mpm_pytorch/constitutive_models/warp_svd/: __init__.py  svd.py  tape.py
